2010-10-14  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        Add a test for very large image layers.  Skip this test for mac-wk2
        because of the use of layerTreeAsText().
        https://bugs.webkit.org/show_bug.cgi?id=47016

        * compositing/tiling/huge-layer-img.html: Added.
        * platform/chromium-gpu/compositing/tiling/huge-layer-img-expected.txt: Added.
        * platform/mac-wk2/Skipped:
        * platform/mac/compositing/tiling/huge-layer-img-expected.txt: Added.
2010-10-14  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        Add a short-term solution for large layers.  Layers that are too
        large to be contained in a single texture just upload the portion of
        the layer that is within the content rect.  A longer-term solution
        is still tiling with proper memory management.  Layers that have full
        3D transforms (more than just translations) are still not drawn.
        https://bugs.webkit.org/show_bug.cgi?id=47016

        Test: compositing/tiling

        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::ContentLayerChromium):
        (WebCore::ContentLayerChromium::requiresClippedUpdateRect):
        (WebCore::ContentLayerChromium::calculateClippedUpdateRect):
        (WebCore::ContentLayerChromium::updateContents):
        (WebCore::ContentLayerChromium::updateTextureRect):
        (WebCore::ContentLayerChromium::draw):
        * platform/graphics/chromium/ContentLayerChromium.h:
        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::updateContents):
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayers):
        * platform/graphics/chromium/LayerRendererChromium.h:
        (WebCore::LayerRendererChromium::rootLayerContentRect):

Canonical link: https://commits.webkit.org/60334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69747 268f45cc-cd09-0410-ab3c-d52691b4dbfc